# nifcloud-sdk-rust

./: .gitignore  README.md  compose.yml  dev.dockerfile
codegen/: build.gradle.kts  gradle.properties  settings.gradle.kts
codegen/nifcloud/sdk/: build.gradle.kts  smithy-build.json
codegen/nifcloud/sdk/nifcloud-models/: storage.json
examples/storage/: Cargo.toml
sdk/storage/: Cargo.toml
sdk/storage/src/: client.rs  config.rs  error_meta.rs  lib.rs  meta.rs  operation.rs  protocol_serde.rs  types.rs
sdk/storage/src/client/: abort_multipart_upload.rs  complete_multipart_upload.rs  delete_bucket.rs  delete_bucket_cors.rs  delete_bucket_lifecycle.rs  delete_bucket_policy.rs  delete_bucket_tagging.rs  delete_multiple_objects.rs  delete_object.rs  delete_object_tagging.rs  get_bucket.rs  get_bucket_acl.rs  get_bucket_consistency.rs  get_bucket_cors.rs  get_bucket_lifecycle_configuration.rs  get_bucket_object_versions.rs  get_bucket_policy.rs  get_bucket_tagging.rs  get_bucket_version2.rs  get_bucket_versioning.rs  get_object.rs  get_object_acl.rs  get_object_tagging.rs  get_service.rs  head_bucket.rs  head_object.rs  initiate_multipart_upload.rs  list_multipart_uploads.rs  list_parts.rs  put_bucket.rs  put_bucket_consistency.rs  put_bucket_cors.rs  put_bucket_lifecycle_configuration.rs  put_bucket_policy.rs  put_bucket_tagging.rs  put_bucket_versioning.rs  put_object.rs  put_object_copy.rs  put_object_tagging.rs  upload_part.rs  (+1 more)
sdk/storage/src/config/: endpoint.rs
sdk/storage/src/operation/: abort_multipart_upload.rs  complete_multipart_upload.rs  get_bucket.rs  (+38 more)
(+283 files in other folders)
